--- a/tfjob.yaml
+++ b/tfjob.yaml
@@ -16,10 +16,10 @@ spec:
         spec:
           containers:
           - name: tensorflow
-            image: josephcruisedocker8624/tfjob:4.0
+            image: josephcruisedocker8624/tfjob:5.0
             command:
                 - "python"
-                - "/tfjob.py"
+                - "/tfjob2.py"
                 - "--saved_model_dir=/train/saved_model/"
             volumeMounts:
                 - mountPath: "/train"
