--- a/katib.yaml
+++ b/katib.yaml
@@ -58,7 +58,7 @@ spec:
                   - name: tensorflow
                     image: mavencodev/tfjob:6.0
                     imagePullPolicy: Always
-                    command:
+                  - command:
                       - "python3"
                       - "/tfjob.py"
                       - "--saved_model_dir=/train/metrics"
