--- a/katib.yaml
+++ b/katib.yaml
@@ -1,4 +1,4 @@
-apiVersion: "kubeflow.org/v1beta1"
+apiVersion: "kubeflow.org/v1alpha3"
 kind: Experiment
 metadata:
   namespace: kubeflow-josepholaide10
