--- a/katib.yaml
+++ b/katib.yaml
@@ -57,8 +57,7 @@ spec:
                 containers:
                   - name: tensorflow
                     image: mavencodev/tfjob:6.0
-                    imagePullPolicy: Always
-                  - command:
+                    command:
                       - "python3"
                       - "/tfjob.py"
                       - "--saved_model_dir=/train/metrics"
