--- a/katib2.yaml
+++ b/katib2.yaml
@@ -1,62 +1,67 @@
-apiVersion: kubeflow.org/v1beta1
+apiVersion: "kubeflow.org/v1alpha3"
 kind: Experiment
 metadata:
-  namespace: josephadmin 
-  labels:
-    controller-tools.k8s.io: '1.0'
-  name: experiment-one
-spec: 
-  parallelTrialCount: 3
-  maxTrialCount: 12
-  maxFailedTrialCount: 3 
-  objective: 
+  namespace: kubeflow
+  name: random-example
+spec:
+  objective:
     type: maximize
     goal: 0.99
-    objectiveMetricName: accuracy
+    objectiveMetricName: Validation-accuracy
     additionalMetricNames:
-  metricsCollectorSpec: 
-    collector:
-      kind: StdOut
-  algorithms:
-    algorithmName: random 
+      - Train-accuracy
+  algorithm:
+    algorithmName: random
+  parallelTrialCount: 3
+  maxTrialCount: 12
+  maxFailedTrialCount: 3
   parameters:
-    - name: learning_rate
+    - name: lr
       parameterType: double
       feasibleSpace:
-        list:
-        min: 0.001
-        max: 0.01
+        min: "0.01"
+        max: "0.03"
+    - name: num-layers
+      parameterType: int
+      feasibleSpace:
+        min: "2"
+        max: "5"
     - name: optimizer
       parameterType: categorical
       feasibleSpace:
         list:
           - sgd
           - adam
+          - ftrl
   trialTemplate:
-    primaryContainerName: tensorflow
+    primaryContainerName: training-container
     trialParameters:
       - name: learningRate
         description: Learning rate for the training model
-        reference: learning_rate
+        reference: lr
+      - name: numberLayers
+        description: Number of training model layers
+        reference: num-layers
       - name: optimizer
-        description: Training model optimizer (sdg, adam)
+        description: Training model optimizer (sdg, adam or ftrl)
         reference: optimizer
     trialSpec:
       apiVersion: batch/v1
-      kind: TFJob
+      kind: Job
       spec:
         template:
 	  metadata:
-            annotations:
-              sidecar.istio.io/inject: "false"
+          annotations:
+            sidecar.istio.io/inject: "false"
           spec:
             containers:
-              - name: tensorflow
-                image: josephcruisedocker8624/tfjob:6.0
+              - name: training-container
+                image: docker.io/kubeflowkatib/mxnet-mnist:v1beta1-e294a90
                 command:
                   - "python3"
-                  - "/tfjob.py"
-                  - "--saved_model_dir=/train/saved_model/"
-                  - "--learning_rate=${trialParameters.learningRate}"
+                  - "/opt/mxnet-mnist/mnist.py"
+                  - "--batch-size=64"
+                  - "--lr=${trialParameters.learningRate}"
+                  - "--num-layers=${trialParameters.numberLayers}"
                   - "--optimizer=${trialParameters.optimizer}"
             restartPolicy: Never
