--- a/katib2.yaml
+++ b/katib2.yaml
@@ -1,67 +1,56 @@
 apiVersion: "kubeflow.org/v1alpha3"
 kind: Experiment
 metadata:
-  namespace: kubeflow
-  name: random-example
+  name: katib-tfjob-experiment
 spec:
-  objective:
-    type: maximize
-    goal: 0.99
-    objectiveMetricName: Validation-accuracy
-    additionalMetricNames:
-      - Train-accuracy
-  algorithm:
-    algorithmName: random
   parallelTrialCount: 3
   maxTrialCount: 12
   maxFailedTrialCount: 3
+  objective:
+    type: maximize
+    goal: 0.99
+    objectiveMetricName: accuracy
+  algorithm:
+    algorithmName: random
   parameters:
-    - name: lr
+    - name: --learning-rate
       parameterType: double
       feasibleSpace:
-        min: "0.01"
-        max: "0.03"
-    - name: num-layers
-      parameterType: int
+        min: "0.3"
+        max: "0.4"
+    - name: --momentum
+      parameterType: double
       feasibleSpace:
-        min: "2"
-        max: "5"
-    - name: optimizer
-      parameterType: categorical
-      feasibleSpace:
-        list:
-          - sgd
-          - adam
-          - ftrl
+        min: "0.6"
+        max: "0.7"
   trialTemplate:
-    primaryContainerName: training-container
-    trialParameters:
-      - name: learningRate
-        description: Learning rate for the training model
-        reference: lr
-      - name: numberLayers
-        description: Number of training model layers
-        reference: num-layers
-      - name: optimizer
-        description: Training model optimizer (sdg, adam or ftrl)
-        reference: optimizer
-    trialSpec:
-      apiVersion: batch/v1
-      kind: Job
-      spec:
-        template:
-	  metadata:
-	    annotations:
-	      sidecar.istio.io/inject: "false"
+    goTemplate:
+        rawTemplate: |-
+          apiVersion: "kubeflow.org/v1"
+          kind: TFJob
+          metadata:
+            name: {{.Trial}}
+            namespace: {{.NameSpace}}
           spec:
-            containers:
-              - name: training-container
-                image: docker.io/kubeflowkatib/mxnet-mnist:v1beta1-e294a90
-                command:
-                  - "python3"
-                  - "/opt/mxnet-mnist/mnist.py"
-                  - "--batch-size=64"
-                  - "--lr=${trialParameters.learningRate}"
-                  - "--num-layers=${trialParameters.numberLayers}"
-                  - "--optimizer=${trialParameters.optimizer}"
-            restartPolicy: Never
+           tfReplicaSpecs:
+            Worker:
+              replicas: 2
+              restartPolicy: OnFailure
+              template:
+                metadata:
+                  annotations:
+                    sidecar.istio.io/inject: "false"
+                spec:
+                  containers:
+                    - name: tensorflow
+                      # modify this property if you would like to use a custom image
+                      image: mesosphere/kubeflow:mnist-tensorflow-2.2-1.0.1-0.5.0
+                      imagePullPolicy: Always
+                      command: ["python", "-u", "/mnist.py"]
+                      args:
+                        {{- with .HyperParameters}}
+                        {{- range .}}
+                        - "{{.Name}}"
+                        - "{{.Value}}"
+                        {{- end}}
+                        {{- end}}
