--- a/katib.yaml
+++ b/katib.yaml
@@ -1,8 +1,7 @@
 apiVersion: "kubeflow.org/v1alpha3"
 kind: Experiment
 metadata:
-  namespace: kubeflow-josepholaide10
-  name: tfjob-example
+  name: katib-tfjob-experiment
 spec:
   parallelTrialCount: 3
   maxTrialCount: 12
@@ -10,56 +9,49 @@ spec:
   objective:
     type: maximize
     goal: 0.99
-    objectiveMetricName: accuracy_1
+    objectiveMetricName: accuracy
   algorithm:
     algorithmName: random
-  metricsCollectorSpec:
-    source:
-      fileSystemPath:
-        path: /train
-        kind: Directory
-    collector:
-      kind: TensorFlowEvent
   parameters:
-    - name: learning_rate
+    - name: --learning_rate
       parameterType: double
       feasibleSpace:
-        min: "0.01"
-        max: "0.05"
-    - name: optimizer
+        min: "0.3"
+        max: "0.4"
+    - name: --optimizer
       parameterType: categorical
       feasibleSpace:
         list:
           - sgd
           - adam
   trialTemplate:
-    primaryContainerName: tensorflow
-    trialParameters:
-      - name: learningRate
-        description: Learning rate for the training model
-        reference: learning_rate
-      - name: optimizer
-        description: Model Optimizer
-        reference: optimizer
-    trialSpec:
-      apiVersion: "kubeflow.org/v1"
-      kind: TFJob
-      spec:
-        tfReplicaSpecs:
-          Worker:
-            replicas: 2
-            restartPolicy: OnFailure
-            template:
-              metadata:
-                annotations:
-                  sidecar.istio.io/inject: "false:
-              spec:
-                containers:
-                  - name: tensorflow
-                    image: mavencodev/tfjob:6.0
-                    command:
-                      - "python3"
-                      - "/tfjob.py"
-                      - "--saved_model_dir=/train/metrics"
-                      - "--learning_rate=${trialParameters.learningRate}"
-                      - "--optimizer=${trialParameters.optimizer}"
+    goTemplate:
+        rawTemplate: |-
+          apiVersion: "kubeflow.org/v1"
+          kind: TFJob
+          metadata:
+            name: {{.Trial}}
+            namespace: {{.NameSpace}}
+          spec:
+           tfReplicaSpecs:
+            Worker:
+              replicas: 2
+              restartPolicy: OnFailure
+              template:
+                metadata:
+                  annotations:
+                    sidecar.istio.io/inject: "false"
+                spec:
+                  containers:
+                    - name: tensorflow
+                      # modify this property if you would like to use a custom image
+                      image: mesosphere/kubeflow:mnist-tensorflow-2.2-1.0.1-0.5.0
+                      imagePullPolicy: Always
+                      command: ["python", "/tfjob.py"]
+                      args:
+                        {{- with .HyperParameters}}
+                        {{- range .}}
+                        - "{{.Name}}"
+                        - "{{.Value}}"
+                        {{- end}}
+                        {{- end}}
