--- a/katib.yaml
+++ b/katib.yaml
@@ -48,7 +48,7 @@ spec:
                       # modify this property if you would like to use a custom image
                       image: josephcruisedocker8624/tfjob:6.0
                       imagePullPolicy: Always
-                      command: ["python", "/tfjob.py"]
+                      command: ["python", "/tfjob.py", "--saved_model_dir=/train/saved_model/", "--learning_rate=${trialParameters.learningRate}", "--optimizer=${trialParameters.optimizer}"]
                       args:
                         {{- with .HyperParameters}}
                         {{- range .}}
